--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,10 +1,7 @@
-<!DOCTYPE html>
-<html lang="en-us">
-  <head>
-    <meta charset="UTF-8">
-    <title>Scraping With Mongoose</title>
-    <style>
-      body { background-color: #F2F6D0 }
+      body { 
+        background: url(https://i.ytimg.com/vi/oq2Oq1J6t70/maxresdefault.jpg);
+        background-size: 100%;
+      }
       #wrapper {
         width: 960px;
         margin-left: auto;
@@ -34,15 +31,3 @@
         height: 200px;
         font-size: 18px;
       }
-    </style>
-  </head>
-  <body>
-    <div id="wrapper">
-      <h1>Note Scraper</h1>
-      <div id="articles"></div>
-      <div id="notes"></div>
-    </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="app.js"></script>
-  </body>
-</html>
