--- a/public/css/style.css
+++ b/public/css/style.css
@@ -38,6 +38,16 @@
         height: 60px;
         width: 80%;
       }
+
+      .modal {
+        background-color: #000000;
+        opacity: 0.58;
+      }
+
+      #bodyinput {
+        height: 100%;
+        width: 100%;
+      }
 /* 
       #notes {
         float: right;
