--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -2,30 +2,31 @@
   
   <h1>Top Twenty Dance Tracks</h1>
   
-  <hr>
+  <br>
   
   <div class="col">
     
     <div class="row">
       <nav class="navbar">
         <div class="container">
-          <a class="navbar-brand scrape-link" href="http://localhost:3000/scrape">Scrape</a>
-          <a class="navbar-brand delete-link" href="http://localhost:3000/scrape">Delete</a>
+          <button class="scrape-link btn">Scrape</button>
+          <button class="delete-link btn">Clear</button>
         </div>
       </nav>
     </div>
    
-   <hr>
+   <br>
 
-    <div class="row">
+    <div class="row content-render">
         {{#each songs}}
         <div class="card" data-id="{{this._id}}" style="width: 18rem;">
           <div class="card-body">
             <a id="song-name" href="{{this.songLink}}" target="_blank"><h5 class="card-title">{{this.title}}</h5></a>
-            <a id="artist-name" href="{{this.artistLink}}" target="_blank"><h6 class="card-subtitle mb-2 text-muted">{{this.artist}}</h6></a>
+            <a id="artist-name" href="{{this.artistLink}}" target="_blank"><h6 class="card-subtitle mb-2">{{this.artist}}</h6></a>
+            <a id="artist-name" href="{{this.secondArtistLink}}" target="_blank"><h6 class="card-subtitle mb-2">{{this.secondArtist}}</h6></a>
             <a id="label-name" href="{{this.labelLink}}" target="_blank"><p class="card-text">{{this.label}}</p></a>
             <a href="#" class="card-link like-track" data-id="{{this._id}}">Like Track</a>
-            <a href="#" class="card-link add-note" data-id="{{this._id}}" data-toggle="modal" data-target="#exampleModalCenter">Add Note</a>
+            <a href="#" class="card-link add-note" data-id="{{this._id}}" data-toggle="modal" data-target="#exampleModalCenter">Track Notes</a>
           </div>
         </div>
 
@@ -39,11 +40,11 @@
                 </button>
               </div>
               <div class="modal-body">
-                <textarea id="notes" name="body"></textarea>
+                <textarea class="w-100" id="notes" name="body"></textarea>
               </div>
               <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary" id="save-note">Save Note</button>
+                <button type="button" class="btn" data-dismiss="modal">Close</button>
+                <button type="button" class="btn" id="save-note">Save Note</button>
               </div>
             </div>
           </div>
